# boostie

./: LICENSE  pyproject.toml  temp.py
src/boostie/: __init__.py  data.py  losses.py  main.py  math_utils.py  metrics.py  model.py  preprocessors.py  tree.py
test/: test.ipynb  test1.ipynb  test2.ipynb
