[project]
name = "boostie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "l-dando", email = "luke.dando@hotmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
boostie = "boostie:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"
